public/index.css
html {
	font-family: monospace;
	font-size: 14px;
}

body {
	padding: 1rem;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	gap: 1rem;
}

* {
	margin: 0;
	padding: 0;
	font-size: 1rem;
}

.site-title {
	display: inline-block;
	text-transform: uppercase;
	margin-bottom: 1rem;
	text-decoration: none;
	color: black;
}

.site-title:hover {
	text-decoration: underline;
}

#clock {
	display: flex;
	flex-wrap: wrap;
	justify-content: flex-end;
	column-gap: 0.5rem;
	padding: 0.25rem 0.5rem;
/*	border: 1.5px solid black;*/
	text-align: right;
}


.site-header {
	display: flex;
	align-items: start;
	justify-content: space-between;
	gap: 3rem;
}

.site-header nav {
	display: flex;
	flex-wrap: wrap;
	width: fit-content;
	list-style: none;
	gap: 2px;
}

.site-header a {
	display: flex;
	padding: 0.25rem 0.5rem;
	border: 1.5px solid black;
	text-decoration: none;
	text-transform: uppercase;
	color: black;
}

.site-header a:hover {
	text-decoration: underline;
}

.site-header a.active {
	background: aquamarine;
	color: black;
}

main {
	display: flex;
	flex-direction: column;
}

article {
	display: flex;
	flex-direction: column;
	gap: 1.5rem;
	max-width: 45em;
	margin: 0 auto;
	padding: 1rem;
	border: 1.5px solid black;
	line-height: 1.35;
}

article.full-post {
	background: floralwhite;
}

article.little-post {
	border: none;
	border-bottom: 1.5px solid black;
	background: white;
}

article header {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	gap: 0.5rem;
	border-bottom: 1.5px solid black;
	padding-bottom: 0.5rem;
}

article h1 {
	font-weight: bolder;
	text-transform: uppercase;
}

article header p {
	opacity: 0.5;
	font-style: italic;
}

#article-list {
	display: flex;
	flex-direction: column;
	gap: 1rem;
	margin-top: 1rem;
}

.empty-state {
	max-width: 45em;
	margin: 0 auto;
	padding: 1rem;
}

.page-description {
	display: flex;
	align-items: center;
	justify-content: space-between;
	flex-wrap: wrap;
	column-gap: 2rem;
	row-gap: 1rem;
	padding: 1rem;
	background-color: lightcyan; 
	border: 1.5px solid lightcyan;
	/*	gold, khaki, aliceblue, antiquewhite, lavander, lemon..., lightcyan, */
}

.page-description > a {
	text-transform: uppercase;
	text-decoration: none;
}

.page-description a:hover {
	text-decoration: underline;
}

#sort-button {
	padding: 0.25rem 0.5rem;
	width: fit-content;
}

.toolbar {
	display: flex;
	align-items: center;
	justify-content: space-between;
	gap: 1rem;
	padding: 1rem;
	background-color: aquamarine;
	border: 1.5px solid black;
}

/*
// UTILS
*/

.nowrap {
	white-space: nowrap;
}

.spacer {
	flex-grow: 1;
}

